@@ -1,3 +1,4 @@
+  - must support arrayref while set parameterized roles, instead repeat the same role name twice
   - fix bug creating a parameterized role with parameter but no role block throw exception
   - fix bug unexpected error while set a parameter in another role
   - make sure we can load a parameterized with no arguments no with keyword (like using default parameters)
